# pinion-demo-signaldesk

./: .env.example  .gitignore  LICENSE  README.md  Sample-PRD.md  Sample-Sprint-1.md  pyproject.toml
.github/workflows/: pytest.yml
alembic/: env.py
alembic/versions/: 009687e6b05f_create_users_table.py  57ce458f0f81_contacts_and_notes_tables.py  c4d9e2a18f10_add_contact_email_phone_company.py  e7f8a9b0c1d2_add_note_interaction_occurred.py
sprints/: README.md  plot_artifact_commits_loc.py  sprint-1.md  sprint-2.md
sprints/artifacts/sprint-1/: execution_log.md  metrics.json  task.md
sprints/artifacts/sprint-1/commits/: git-log.txt
sprints/artifacts/sprint-2/: execution_log.md  metrics.json  task.md
sprints/artifacts/sprint-2/commits/: git-log.txt
src/signaldesk/: __init__.py  main.py  settings.py
src/signaldesk/api/: auth.py  contacts.py  deps.py  error_handlers.py
src/signaldesk/db/: __init__.py  session.py
src/signaldesk/models/: __init__.py  contact.py  note.py  user.py
src/signaldesk/schemas/: __init__.py  auth.py  contact.py  note.py
src/signaldesk/security/: __init__.py  jwt_tokens.py
tests/: conftest.py  test_auth_api.py  test_contacts_api.py  test_crm_e2e.py  test_db.py  test_errors_api.py  test_health.py  test_notes_api.py  test_security.py
