[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signaldesk"
version = "0.1.0"
description = "SignalDesk API — minimal CRM-style backend demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
