[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signaldesk"
version = "0.1.0"
description = "SignalDesk API — minimal CRM-style backend demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.6,<0.116",
    "uvicorn[standard]>=0.34.0,<0.35",
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "aiosqlite>=0.20.0,<0.21",
    "alembic>=1.14.0,<1.15",
    "pydantic-settings>=2.6.0,<2.7",
    "passlib[bcrypt]>=1.7.4,<1.8",
    "bcrypt>=3.2.2,<4",
    "PyJWT>=2.8.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
